<resources>
    <string name="app_name">birthday card</string>
    <string name="my_android_app">My Android App!</string>
    <string name="hello_world">hello world</string>
    <string name="dice_excersice_2">Dice : excersice 2</string>
    <string name="roll">Roll</string>
    <string name="next">Next</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="ok_15">OK (15%)</string>
    <string name="round_the_tip">Round the tip</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="label">label</string>
</resources>